--- a/src/Clients/BlazorWeb/BlazorChat.Client.Web/wwwroot/index.html
+++ b/src/Clients/BlazorWeb/BlazorChat.Client.Web/wwwroot/index.html
@@ -9,10 +9,11 @@
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="BlazorChat.Client.Web.styles.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
-    <div id="app">Loading...</div>
+    <div id="app" style="background: #2d2d2d;">Loading...</div>
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
